Changed alot of stuff
Changed:
- Changed Location to Building
- Changed Office to Room

Added:
- Added RoomType enum
- Added Event class

--- a/BrightLandsWayfinding/Views/Buildings/Index.cshtml
+++ b/BrightLandsWayfinding/Views/Buildings/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BrightLandsWayfinding.Models.Locations.Location>
+﻿@model IEnumerable<BrightLandsWayfinding.Models.Locations.Building>
 
 @{
     ViewData["Title"] = "Index";
