--- a/BrightLandsWayfinding/Views/Buildings/Delete.cshtml
+++ b/BrightLandsWayfinding/Views/Buildings/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BrightLandsWayfinding.Models.Locations.Location
+﻿@model BrightLandsWayfinding.Models.Locations.Building
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,7 +9,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Location</h4>
+    <h4>Building</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
