--- a/BrightLandsWayfinding/Views/Buildings/Details.cshtml
+++ b/BrightLandsWayfinding/Views/Buildings/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model BrightLandsWayfinding.Models.Locations.Location
+﻿@model BrightLandsWayfinding.Models.Locations.Building
 
 @{
     ViewData["Title"] = "Details";
@@ -8,7 +8,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Location</h4>
+    <h4>Building</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
