--- a/BrightLandsWayfinding/Views/Rooms/Create.cshtml
+++ b/BrightLandsWayfinding/Views/Rooms/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BrightLandsWayfinding.Models.Offices.Office
+﻿@model BrightLandsWayfinding.Models.Rooms.Room
 
 @{
     ViewData["Title"] = "Create";
@@ -7,7 +7,7 @@
 
 <h1>Create</h1>
 
-<h4>Office</h4>
+<h4>Room</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -17,6 +17,11 @@
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Type" class="control-label"></label>
+                <input asp-for="Type" class="form-control" />
+                <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
