--- a/BrightLandsWayfinding/Views/Rooms/Delete.cshtml
+++ b/BrightLandsWayfinding/Views/Rooms/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BrightLandsWayfinding.Models.Offices.Office
+﻿@model BrightLandsWayfinding.Models.Rooms.Room
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,7 +9,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Office</h4>
+    <h4>Room</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -17,6 +17,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Type)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Type)
         </dd>
     </dl>
     
