--- a/BrightLandsWayfinding/Views/Buildings/Details.cshtml
+++ b/BrightLandsWayfinding/Views/Buildings/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model BrightLandsWayfinding.Models.Locations.Building
+﻿@model BrightLandsWayfinding.Models.Buildings.Building
 
 @{
     ViewData["Title"] = "Details";
