--- a/BrightLandsWayfinding/Views/Buildings/Index.cshtml
+++ b/BrightLandsWayfinding/Views/Buildings/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BrightLandsWayfinding.Models.Locations.Building>
+﻿@model IEnumerable<BrightLandsWayfinding.Models.Buildings.Building>
 
 @{
     ViewData["Title"] = "Index";
