--- a/BrightLandsWayfinding/wwwroot/assets/plugins/bootstrap/css/bootstrap-reboot.css
+++ b/BrightLandsWayfinding/wwwroot/assets/plugins/bootstrap/css/bootstrap-reboot.css
@@ -123,9 +123,9 @@ sup {
 }
 
 a {
-  color: #007bff;
-  text-decoration: none;
-  background-color: transparent;
+    color: #A29A99;
+    text-decoration: none;
+    background-color: transparent;
 }
 
 a:hover {
