--- a/BrightLandsWayfinding/Views/Buildings/Details.cshtml
+++ b/BrightLandsWayfinding/Views/Buildings/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model BrightLandsWayfinding.Models.Buildings.Building
+﻿@using BrightLandsWayfinding.Models.Stories
+@model BrightLandsWayfinding.Models.Buildings.Building
 
 @{
     ViewData["Title"] = "Details";
@@ -49,7 +50,30 @@
         </dd>
     </dl>
 </div>
+<div class="card">
+    <h3 class="card-header">Stories</h3>
+    <div  class="card-body">
+        @{
+            if (Model.Stories != null)
+            {
+                foreach (Story s in Model.Stories)
+                {
+                                        <div class="row">
+                                                        <div class="col-6">
+                                                            <a asp-controller="Stories" asp-action="Details" asp-route-id="@s.ID">@s.Name</a> 
+                                                        </div>
+                                                        <div class="col-4">
+                                                            <a asp-controller="Stories" asp-action="Edit" asp-route-id="@s.ID">Edit</a>  |
+                                                            <a asp-controller="Stories" asp-action="Delete" asp-route-id="@s.ID">Delete</a> 
+                                                        </div>
+                                        </div> 
+
+                }
+            }
+        }  
+    </div>  
+</div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
