--- a/BrightLandsWayfinding/Views/Companies/Details.cshtml
+++ b/BrightLandsWayfinding/Views/Companies/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model BrightLandsWayfinding.Models.Companies.Company
+﻿@using BrightLandsWayfinding.Models.Users
+@model BrightLandsWayfinding.Models.Companies.Company
 
 @{
     ViewData["Title"] = "Details";
@@ -47,9 +48,39 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.WebsiteURL)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Room)
+        </dt>
+        <dd class = "col-sm-10">
+            <a asp-controller="Rooms" asp-action="Details" asp-route-id="@Model.RoomID"> @Html.DisplayFor(model => model.Room.Name)</a>
+        </dd>
     </dl>
 </div>
+<div class="card">
+    <h3 class="card-header">Employees</h3>
+    <div class=card-body>
+        @{
+            if (ViewBag.Users != null)
+            {
+                foreach (User u in ViewBag.Users)
+                {
+                    if (u.CompanyID == Model.ID)
+                    {
+                                    <div class="row">
+                                        <div class="col-8"><a asp-action="Details" asp-controller="Users" asp-route-id="@u.ID">@u.Name</a> | 
+                                @u.UserType</div>
+                                        <div class="col-2"><a asp-action="Edit" asp-controller="Users" asp-route-id="@u.ID">Edit</a> | 
+                                                           <a asp-action="Delete" asp-controller="Users" asp-route-id="@u.ID">Delete</a>
+                                         </div>
+                                    </div>
+
+                    }
+                }
+            }
+        }
+    </div>
+</div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
