--- a/BrightLandsWayfinding/Views/Companies/Index.cshtml
+++ b/BrightLandsWayfinding/Views/Companies/Index.cshtml
@@ -31,6 +31,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.WebsiteURL)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Room)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -54,6 +57,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.WebsiteURL)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Room.ID)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
