--- a/BrightLandsWayfinding/Views/Rooms/Delete.cshtml
+++ b/BrightLandsWayfinding/Views/Rooms/Delete.cshtml
@@ -19,6 +19,12 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Story)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Story.ID)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Type)
         </dt>
         <dd class = "col-sm-10">
