--- a/BrightLandsWayfinding/Views/Rooms/Index.cshtml
+++ b/BrightLandsWayfinding/Views/Rooms/Index.cshtml
@@ -17,6 +17,9 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Story)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Type)
             </th>
             <th></th>
@@ -27,6 +30,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Story.ID)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Type)
