--- a/BrightLandsWayfinding/Views/Steps/Create.cshtml
+++ b/BrightLandsWayfinding/Views/Steps/Create.cshtml
@@ -19,6 +19,10 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="RoomID" class="control-label"></label>
+                <select asp-for="RoomID" class ="form-control" asp-items="ViewBag.RoomID"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
