--- a/BrightLandsWayfinding/Views/Steps/Delete.cshtml
+++ b/BrightLandsWayfinding/Views/Steps/Delete.cshtml
@@ -18,6 +18,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Room)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Room.ID)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
