--- a/BrightLandsWayfinding/Views/Stories/Details.cshtml
+++ b/BrightLandsWayfinding/Views/Stories/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model BrightLandsWayfinding.Models.Stories.Story
+﻿@using BrightLandsWayfinding.Models.Rooms
+@model BrightLandsWayfinding.Models.Stories.Story
 
 @{
     ViewData["Title"] = "Details";
@@ -17,9 +18,38 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Building)
+        </dt>
+        <dd class = "col-sm-10">
+              <a asp-controller="Buildings" asp-action="Details" asp-route-id="@Model.BuildingID">@Html.DisplayFor(model => model.Building.Name)</a>
+        </dd>
     </dl>
 </div>
+<div class="card">
+    <h3 class="card-header">Rooms</h3>
+    <div class="card-body">
+    @{
+        if (Model.Rooms != null)
+        {
+            foreach (Room r in Model.Rooms)
+            {
+                <div class="row">
+                                <div class="col-6">
+                                    <a asp-controller="Rooms" asp-action="Details" asp-route-id="@r.ID">@r.Name</a> 
+                                </div>
+                                <div class="col-4">
+                                    <a asp-controller="Rooms" asp-action="Edit" asp-route-id="@r.ID">Edit</a>  |
+                                    <a asp-controller="Rooms" asp-action="Delete" asp-route-id="@r.ID">Delete</a> 
+                                </div>
+                </div> 
+
+            }
+        }
+    }    
+    </div>
+</div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
