--- a/BrightLandsWayfinding/Views/Users/Create.cshtml
+++ b/BrightLandsWayfinding/Views/Users/Create.cshtml
@@ -54,19 +54,34 @@
                 <span asp-validation-for="DateOfBirth" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Description" class="control-label"></label>
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <select asp-for="Gender" class="form-control"></select>
+                <select asp-for="Gender" class="form-control">
+                    <option value="0">Male</option>
+                    <option value="1">Female</option>
+                    <option value="2">Other</option>
+                </select>
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="UserType" class="control-label"></label>
-                <select asp-for="UserType" class="form-control"></select>
+                <select asp-for="UserType" class="form-control">
+                    <option value="0">Visitor</option>
+                    <option value="1">Invited</option>
+                    <option value="2">Worker</option>
+                    <option value="3">Owner</option>
+                    <option value="4">Admin</option>
+                </select>
                 <span asp-validation-for="UserType" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+                <label asp-for="CompanyID" class="control-label"></label>
+                <select asp-for="CompanyID" class ="form-control" asp-items="ViewBag.CompanyID"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
