--- a/BrightLandsWayfinding/Views/Users/Delete.cshtml
+++ b/BrightLandsWayfinding/Views/Users/Delete.cshtml
@@ -78,6 +78,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Company)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Company.Description)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
