--- a/BrightLandsWayfinding/Views/Users/Details.cshtml
+++ b/BrightLandsWayfinding/Views/Users/Details.cshtml
@@ -77,9 +77,15 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Company)
+        </dt>
+        <dd class = "col-sm-10">
+            <a asp-controller="Companies" asp-action="Details" asp-route-id="@Model.CompanyID"></a>@Html.DisplayFor(model => model.Company.Name)
+        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
