--- a/BrightLandsWayfinding/Views/Users/Index.cshtml
+++ b/BrightLandsWayfinding/Views/Users/Index.cshtml
@@ -46,6 +46,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Company)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -84,6 +87,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Company.Description)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
