Added easier ui for creating
Added Create Building button if database has no building.
Easier buttons added to create stories,rooms,companies,users for building

--- a/BrightLandsWayfinding/Views/Buildings/Details.cshtml
+++ b/BrightLandsWayfinding/Views/Buildings/Details.cshtml
@@ -53,6 +53,9 @@
 <div class="card">
     <h3 class="card-header">Stories</h3>
     <div  class="card-body">
+        <a asp-action="Create" asp-controller="Stories" class="btn btn-primary">Create New Story..</a>
+        <br />
+        <br />
         @{
             if (Model.Stories != null)
             {
