--- a/BrightLandsWayfinding/Views/Rooms/Details.cshtml
+++ b/BrightLandsWayfinding/Views/Rooms/Details.cshtml
@@ -35,6 +35,9 @@
 <div class="card">
     <h3 class="card-header">Company</h3>
     <div class=card-body>
+        <a asp-action="Create" asp-controller="Companies" class="btn btn-primary">Create New Company..</a>
+        <br />
+        <br />
         @{
             if (ViewBag.Companies != null)
             {
