--- a/BrightLandsWayfinding/Views/Shared/_Layout.cshtml
+++ b/BrightLandsWayfinding/Views/Shared/_Layout.cshtml
@@ -691,7 +691,7 @@
                                 <i class="mdi mdi-settings mdi-spin"></i>
                             </li>
                             <!-- User Account -->
-                            <li class="dropdown user-menu">
+                            @*<li class="dropdown user-menu">
                                 <button href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
                                     <img src="~/assets/img/user/user.png" class="user-image" alt="User Image" />
                                     <span class="d-none d-lg-inline-block">Abdus Salam</span>
@@ -726,7 +726,7 @@
                                         <a href="index.html"> <i class="mdi mdi-logout"></i> Log Out </a>
                                     </li>
                                 </ul>
-                            </li>
+                            </li>*@
                         </ul>
                     </div>
                 </nav>
