--- a/BrightLandsWayfinding/Views/Stories/Index.cshtml
+++ b/BrightLandsWayfinding/Views/Stories/Index.cshtml
@@ -29,7 +29,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Building.ID)
+                @Html.DisplayFor(modelItem => item.Building.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
