--- a/BrightLandsWayfinding/Views/Shared/_Layout.cshtml
+++ b/BrightLandsWayfinding/Views/Shared/_Layout.cshtml
@@ -155,7 +155,7 @@
                                 <a class="sidenav-item-link" href="javascript:void(0)" data-toggle="collapse" data-target="#components"
                                    aria-expanded="false" aria-controls="components">
                                     <i class="mdi mdi-pencil-box-multiple"></i>
-                                    <span class="nav-text">Users</span> <b class="caret"></b>
+                                    <span class="nav-text">People</span> <b class="caret"></b>
                                 </a>
 
                                 <ul class="collapse " id="components" data-parent="#sidebar-menu">
