--- a/BrightLandsWayfinding/wwwroot/assets/css/sleek.css
+++ b/BrightLandsWayfinding/wwwroot/assets/css/sleek.css
@@ -159,6 +159,7 @@ a {
     text-decoration: none;
     background-color: transparent;
     font-family: sans-serif;
+    display: block;
 }
 
 a:hover {
