--- a/BrightLandsWayfinding/Views/Home/Privacy.cshtml
+++ b/BrightLandsWayfinding/Views/Home/Privacy.cshtml
@@ -4,76 +4,30 @@
 
 <div class="card">
     <h1 class ="card-header">@ViewData["Title"]</h1>
-    <div class="card-body">
-        <div class="card" style="display:inline-block;">
-            <h3 class="card-header">Buildings</h3>
+    <div class="card-body">        
+        <div class="card">
+            <h4 class="card-header">AdminPages</h4>
             <div class="card-body">
-                <a href="/Buildings/Index">Buildings-Index</a>
-                <a href="/Buildings/Create">Buildings-Create</a>
-                <a href="/Buildings/Edit">Buildings-Edit</a>
-                <a href="/Buildings/Delete">Buildings-Delete</a>
-                <a href="/Buildings/Details">Buildings-Details</a>
+                <a class="btn btn-primary" href="/Buildings/Index">Buildings-Index</a>
+                <a class="btn btn-primary" href="/Stories/Index">Stories-Index</a>
+                <a class="btn btn-primary" href="/Rooms/Index">Rooms-Index</a>
+                <a class="btn btn-primary" href="/Companies/Index">Companies-Index</a>
+                <a class="btn btn-primary" href="/Users/Index">Users-Index</a>
+                <a class="btn btn-primary" href="/Steps/Index">Steps-Index</a>
+                <a class="btn btn-primary" href="/Events/Index">Events-Index</a>
+            </div>            
+        </div>
+        <div class="card">
+            <h4 class="card-header">UserPages</h4>
+            <div class="card-body">
+                <a class="btn btn-primary" href="/Buildings/UserIndex">Buildings-Index</a>
+                <a class="btn btn-primary" href="/Stories/UserIndex">Stories-Index</a>
+                <a class="btn btn-primary" href="/Rooms/UserIndex">Rooms-Index</a>
+                <a class="btn btn-primary" href="/Companies/UserIndex">Companies-Index</a>
+                <a class="btn btn-primary" href="/Users/UserIndex">Users-Index</a>
+                <a class="btn btn-primary" href="/Steps/UserIndex">Steps-Index</a>
+                <a class="btn btn-primary" href="/Events/UserIndex">Events-Index</a>
             </div>
         </div>
-        <div class="card" style="display:inline-block;">
-            <h3 class="card-header">Storys</h3>
-            <div class="card-body">
-                <a href="/Stories/Index">Stories-Index</a>
-                <a href="/Stories/Create">Stories-Create</a>
-                <a href="/Stories/Edit">Stories-Edit</a>
-                <a href="/Stories/Delete">Stories-Delete</a>
-                <a href="/Stories/Details">Stories-Details</a>
-            </div>
-        </div>
-        <div class="card" style="display:inline-block;">
-            <h3 class="card-header">Rooms</h3>
-            <div class="card-body">
-                <a href="/Rooms/Index">Rooms-Index</a>
-                <a href="/Rooms/Create">Rooms-Create</a>
-                <a href="/Rooms/Edit">Rooms-Edit</a>
-                <a href="/Rooms/Delete">Rooms-Delete</a>
-                <a href="/Rooms/Details">Rooms-Details</a>
-            </div>
-        </div>
-        <div class="card" style="display:inline-block;">
-            <h3 class="card-header">Companies</h3>
-            <div class="card-body">
-                <a href="">Companies-Index</a>
-                <a href="">Companies-Create</a>
-                <a href="">Companies-Edit</a>
-                <a href="">Companies-Delete</a>
-                <a href="">Companies-Details</a>
-            </div>
-        </div>
-        <div class="card" style="display:inline-block;">
-            <h3 class="card-header">Users</h3>
-            <div class="card-body">
-                <a href="">Users-Index</a>
-                <a href="">Users-Create</a>
-                <a href="">Users-Edit</a>
-                <a href="">Users-Delete</a>
-                <a href="">Users-Details</a>
-            </div>
-        </div>
-        <div class="card" style="display:inline-block;">
-            <h3 class="card-header">Steps</h3>
-            <div class="card-body">
-                <a href="">Steps-Index</a>
-                <a href="">Steps-Create</a>
-                <a href="">Steps-Edit</a>
-                <a href="">Steps-Delete</a>
-                <a href="">Steps-Details</a>
-            </div>
-        </div>
-        <div class="card" style="display:inline-block;">
-            <h3 class="card-header">Events</h3>
-            <div class="card-body">
-                <a href="">Events-Index</a>
-                <a href="">Events-Create</a>
-                <a href="">Events-Edit</a>
-                <a href="">Events-Delete</a>
-                <a href="">Events-Details</a>
-            </div>
-        </div> 
     </div>
 </div>
