--- a/BrightLandsWayfinding/Views/Steps/UserIndex.cshtml
+++ b/BrightLandsWayfinding/Views/Steps/UserIndex.cshtml
@@ -7,9 +7,6 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -32,9 +29,7 @@
                 @Html.DisplayFor(modelItem => item.Room.ID)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                <a asp-action="Details" asp-route-id="@item.ID">Details</a>
             </td>
         </tr>
 }
