--- a/BrightLandsWayfinding/Views/Buildings/UserIndex.cshtml
+++ b/BrightLandsWayfinding/Views/Buildings/UserIndex.cshtml
@@ -53,7 +53,7 @@
                 @Html.DisplayFor(modelItem => item.Country)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a>
+                <a asp-action="UserDetails" asp-route-id="@item.ID">Details</a>
             </td>
         </tr>
 }
