--- a/BrightLandsWayfinding/Views/Companies/UserIndex.cshtml
+++ b/BrightLandsWayfinding/Views/Companies/UserIndex.cshtml
@@ -59,7 +59,7 @@
                 @Html.DisplayFor(modelItem => item.Room.ID)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a>
+                <a asp-action="UserDetails" asp-route-id="@item.ID">Details</a>
             </td>
         </tr>
 }
