--- a/BrightLandsWayfinding/Views/Stories/UserIndex.cshtml
+++ b/BrightLandsWayfinding/Views/Stories/UserIndex.cshtml
@@ -29,7 +29,7 @@
                 @Html.DisplayFor(modelItem => item.Building.Name)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a>
+                <a asp-action="UserDetails" asp-route-id="@item.ID">Details</a>
             </td>
         </tr>
 }
