--- a/BrightLandsWayfinding/Views/Rooms/UserIndex.cshtml
+++ b/BrightLandsWayfinding/Views/Rooms/UserIndex.cshtml
@@ -35,7 +35,7 @@
                 @Html.DisplayFor(modelItem => item.Type)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a>
+                <a asp-action="UserDetails" asp-route-id="@item.ID">Details</a>
             </td>
         </tr>
 }
