--- a/BrightLandsWayfinding/Views/Users/UserIndex.cshtml
+++ b/BrightLandsWayfinding/Views/Users/UserIndex.cshtml
@@ -89,7 +89,7 @@
                 @Html.DisplayFor(modelItem => item.Company.Description)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a>
+                <a asp-action="UserDetails" asp-route-id="@item.ID">Details</a>
             </td>
         </tr>
 }
