--- a/BrightLandsWayfinding/Views/Buildings/UserDetails.cshtml
+++ b/BrightLandsWayfinding/Views/Buildings/UserDetails.cshtml
@@ -60,7 +60,7 @@
                 {
                                         <div class="row">
                                                         <div class="col-6">
-                                                            <a asp-controller="Stories" asp-action="Details" asp-route-id="@s.ID">@s.Name</a> 
+                                                            <a asp-controller="Stories" asp-action="UserDetails" asp-route-id="@s.ID">@s.Name</a> 
                                                         </div>                                                        
                                         </div> 
                 }
