--- a/BrightLandsWayfinding/Views/Shared/_Layout.cshtml
+++ b/BrightLandsWayfinding/Views/Shared/_Layout.cshtml
@@ -115,7 +115,7 @@
                     </div>
 
                     <!-- begin sidebar scrollbar -->
-                    <div class="" data-simplebar style="height: 100%;">
+                    <div class="" data-simplebar style="overflow:scroll; height: 100%;">
                         <!-- sidebar menu -->
                         <ul class="nav sidebar-inner" id="sidebar-menu">
                             <li class="has-sub">
@@ -208,9 +208,9 @@
 
         <div class="sidebar-footer">
             <hr class="separator mb-0" />
-            @*<div class="sidebar-footer-content">
+            <div class="sidebar-footer-content">
                 <h6 class="text-uppercase">
-                    Cpu Uses <span class="float-right">40%</span>
+                    Poeple present <span class="float-right">40/100</span>
                 </h6>
 
                 <div class="progress progress-xs">
@@ -218,13 +218,13 @@
                 </div>
 
                 <h6 class="text-uppercase">
-                    Memory Uses <span class="float-right">65%</span>
+                    Rooms Used <span class="float-right">65/120</span>
                 </h6>
 
                 <div class="progress progress-xs">
                     <div class="progress-bar progress-bar-warning" style="width: 65%;" role="progressbar"></div>
                 </div>
-            </div>*@
+            </div>
         </div>
         </div>
         </aside>
