--- a/BrightLandsWayfinding/Views/MapRoutes/Create.cshtml
+++ b/BrightLandsWayfinding/Views/MapRoutes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BrightLandsWayfinding.Models.Steps.Step
+﻿@model BrightLandsWayfinding.Models.MapRoutes.MapRoute
 
 @{
     ViewData["Title"] = "Create";
@@ -7,7 +7,7 @@
 
 <h1>Create</h1>
 
-<h4>Step</h4>
+<h4>MapRoute</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -19,8 +19,12 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MapRouteID" class="control-label"></label>
-                <select asp-for="MapRouteID" class ="form-control" asp-items="ViewBag.MapRouteID"></select>
+                <label asp-for="StartLocationID" class="control-label"></label>
+                <select asp-for="StartLocationID" class ="form-control" asp-items="ViewBag.StartLocationID"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="EndLocationID" class="control-label"></label>
+                <select asp-for="EndLocationID" class ="form-control" asp-items="ViewBag.EndLocationID"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
