--- a/BrightLandsWayfinding/Views/MapRoutes/Delete.cshtml
+++ b/BrightLandsWayfinding/Views/MapRoutes/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BrightLandsWayfinding.Models.Steps.Step
+﻿@model BrightLandsWayfinding.Models.MapRoutes.MapRoute
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,7 +9,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Step</h4>
+    <h4>MapRoute</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -19,10 +19,16 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MapRoute)
+            @Html.DisplayNameFor(model => model.StartLocation)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MapRoute.ID)
+            @Html.DisplayFor(model => model.StartLocation.ID)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.EndLocation)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.EndLocation.ID)
         </dd>
     </dl>
     
