--- a/BrightLandsWayfinding/Views/MapRoutes/Index.cshtml
+++ b/BrightLandsWayfinding/Views/MapRoutes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BrightLandsWayfinding.Models.Steps.Step>
+﻿@model IEnumerable<BrightLandsWayfinding.Models.MapRoutes.MapRoute>
 
 @{
     ViewData["Title"] = "Index";
@@ -17,7 +17,10 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MapRoute)
+                @Html.DisplayNameFor(model => model.StartLocation)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EndLocation)
             </th>
             <th></th>
         </tr>
@@ -29,7 +32,10 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.MapRoute.ID)
+                @Html.DisplayFor(modelItem => item.StartLocation.ID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EndLocation.ID)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
