Idk Wat er is gefixr

--- a/BrightLandsWayfinding/Views/Home/Privacy.cshtml
+++ b/BrightLandsWayfinding/Views/Home/Privacy.cshtml
@@ -13,6 +13,7 @@
                 <a class="btn btn-primary" href="/Rooms/Index">Rooms-Index</a>
                 <a class="btn btn-primary" href="/Companies/Index">Companies-Index</a>
                 <a class="btn btn-primary" href="/Users/Index">Users-Index</a>
+                <a class="btn btn-primary" href="/MapRoutes/Index">MapRoutes-Index</a>
                 <a class="btn btn-primary" href="/Steps/Index">Steps-Index</a>
                 <a class="btn btn-primary" href="/Events/Index">Events-Index</a>
             </div>            
@@ -25,6 +26,7 @@
                 <a class="btn btn-primary" href="/Rooms/UserIndex">Rooms-Index</a>
                 <a class="btn btn-primary" href="/Companies/UserIndex">Companies-Index</a>
                 <a class="btn btn-primary" href="/Users/UserIndex">Users-Index</a>
+                <a class="btn btn-primary" href="/MapRoutes/UserIndex">MapRoutes-Index</a>
                 <a class="btn btn-primary" href="/Steps/UserIndex">Steps-Index</a>
                 <a class="btn btn-primary" href="/Events/UserIndex">Events-Index</a>
             </div>
