--- a/BrightLandsWayfinding/Views/MapRoutes/UserDetails.cshtml
+++ b/BrightLandsWayfinding/Views/MapRoutes/UserDetails.cshtml
@@ -33,7 +33,7 @@
     </dl>
 </div>
 <div class="card">
-    <h3 class="card-header">Stories</h3>
+    <h3 class="card-header">Steps</h3>
     <div  class="card-body">
         <br />
         <br />
@@ -45,7 +45,7 @@
                     <div class="row">   
                                     <div class="col-1">@s.ID</div>
                                     <div class="col-9">
-                                        <a asp-controller="Stories" asp-action="Details" asp-route-id="@s.ID">@s.Description</a> 
+                                        <a asp-controller="Steps" asp-action="UserDetails" asp-route-id="@s.ID">@s.Description</a> 
                                     </div>
                     </div> 
                 }
