--- a/BrightLandsWayfinding/Views/MapRoutes/UserIndex.cshtml
+++ b/BrightLandsWayfinding/Views/MapRoutes/UserIndex.cshtml
@@ -35,7 +35,7 @@
             </td>
             <td>
 
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a>
+                <a asp-action="UserDetails" asp-route-id="@item.ID">Details</a>
             </td>
         </tr>
 }
